# ChangeLog for app-editors/emacs
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.259 2008/06/01 11:49:14 ulm Exp $

  01 Jun 2008; Ulrich Mueller <ulm@gentoo.org> emacs-21.4-r15.ebuild,
  emacs-21.4-r17.ebuild, emacs-22.1-r4.ebuild, emacs-22.2-r2.ebuild:
  Depend on x11-libs/openmotif explicitely for USE=motif.

  31 May 2008; Christian Faulhammer <opfer@gentoo.org>
  -emacs-18.59-r4.ebuild:
  clean up

  31 May 2008; Christian Faulhammer <opfer@gentoo.org>
  emacs-18.59-r5.ebuild:
  stable x86, bug 221281

  16 May 2008; Ulrich Mueller <ulm@gentoo.org> -emacs-22.2-r1.ebuild:
  Remove intermediate version.

  16 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  emacs-21.4-r17.ebuild, emacs-22.2-r2.ebuild:
  ppc stable, bug #221197

  14 May 2008; Markus Meier <maekke@gentoo.org> emacs-21.4-r17.ebuild,
  emacs-22.2-r2.ebuild:
  amd64 stable, bug #221197

  14 May 2008; Christian Faulhammer <opfer@gentoo.org>
  emacs-21.4-r17.ebuild, emacs-22.2-r2.ebuild:
  stable x86, security bug 221197

  14 May 2008; Markus Rothe <corsair@gentoo.org> emacs-21.4-r17.ebuild,
  emacs-22.2-r2.ebuild:
  Stable on ppc64; bug #221197

  13 May 2008; Jeroen Roovers <jer@gentoo.org> emacs-21.4-r17.ebuild,
  emacs-22.2-r2.ebuild:
  Stable for HPPA (bug #221197).

  13 May 2008; Raúl Porcel <armin76@gentoo.org> emacs-21.4-r17.ebuild,
  emacs-22.2-r2.ebuild:
  alpha/ia64/sparc stable wrt #221197

*emacs-22.2-r2 (12 May 2008)
*emacs-21.4-r17 (12 May 2008)

  12 May 2008; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-22.2-fast-lock.patch, -emacs-21.4-r16.ebuild,
  +emacs-21.4-r17.ebuild, +emacs-22.2-r2.ebuild:
  Security fix for fast-lock cache, CVE-2008-2142, bug 221197.

*emacs-21.4-r16 (11 May 2008)
*emacs-18.59-r5 (11 May 2008)

  11 May 2008; Ulrich Mueller <ulm@gentoo.org> +emacs-18.59-r5.ebuild,
  +emacs-21.4-r16.ebuild: